Add jobs storage DNS and notifications
